Add explicit dependency on CPAN::Meta 2.120920

--- a/dist.ini
+++ b/dist.ini
@@ -5,3 +5,6 @@ copyright_holder = Leon Timmermans
 copyright_year   = 2012
 
 [@LEONT::PP]
+[Prereqs]
+CPAN::Meta = 2.120920 
+;should be a conflict with lower versions, but whatever
