--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,8 @@ license = Perl_5
 copyright_holder = Leon Timmermans
 copyright_year   = 2012
 
-[@LEONT::PP]
+[@LEONT]
+install_tool = eumm
 [Prereqs]
 CPAN::Meta = 2.120920 
 ;should be a conflict with lower versions, but whatever
