Switch to using merged_requirements

--- a/dist.ini
+++ b/dist.ini
@@ -7,5 +7,5 @@ copyright_year   = 2012
 [@LEONT]
 install_tool = eumm
 [Prereqs]
-CPAN::Meta = 2.120920 
-;should be a conflict with lower versions, but whatever
+CPAN::Meta::Requirements = 2.121
+CPAN::Meta::Prereqs = 2.132830
