--- a/dist.ini
+++ b/dist.ini
@@ -8,3 +8,13 @@ copyright_year   = 2012
 install_tool = eumm
 [Prereqs]
 CPAN::Meta::Prereqs = 2.132830
+
+[Git::CheckFor::MergeConflicts]
+
+[Git::CheckFor::CorrectBranch]
+:version = 0.004
+release_branch = master
+
+[Git::Remote::Check]
+branch = master
+remote_branch = master
