--- a/dist.ini
+++ b/dist.ini
@@ -4,8 +4,45 @@ license = Perl_5
 copyright_holder = Leon Timmermans
 copyright_year   = 2012
 
-[@LEONT]
-install_tool = eumm
+[Git::GatherDir]
+[PruneCruft]
+[MetaYAML]
+[License]
+[Manifest]
+[Readme]
+
+[AutoPrereqs]
+[MetaJSON]
+[Repository]
+[Bugtracker]
+[Git::NextVersion]
+[MetaProvides::Package]
+
+[MakeMaker]
+
+[Test::Compile]
+[PodSyntaxTests]
+[PodCoverageTests]
+
+[InstallGuide]
+[PodWeaver]
+[PkgVersion]
+[NextRelease]
+
+[CheckChangesHasContent]
+[Git::Check]
+[RunExtraTests]
+[TestRelease]
+[ConfirmRelease]
+
+[MinimumPerl]
+
+[UploadToCPAN]
+
+[Git::Commit]
+[Git::Tag]
+[Git::Push]
+
 [Prereqs]
 CPAN::Meta::Prereqs = 2.132830
 
